# C-course-practice

./: .gitignore  README.md
cmake_project_sample/: CMakeLists.txt  README.md
cmake_project_sample/src/: hello.c  main.c
examples/: array.c  array_inverse.c  bogosort.c  dynamic_memory.c  func_ptrs.c  function.c  gcd.c  geometric_progression.c  if_else.c  loops.c  slowsorts.c  struct.c  switch.c  text_file.c
laboratory_works/: README.md  bitfield_sieve.md  convex_hull.md  game_of_life.md  matrix_class.md  series_summation.md  sorting.md
laboratory_works/fall/: game_of_life.md
laboratory_works/spring/: list_vector.md
